tests/baselines/reference/assignmentCompatPredicates5inheritance.errors.txt
tests/cases/compiler/assignmentCompatPredicates5inheritance.ts(30,5): error TS2322: Type 'PrivateMessage1' is not assignable to type 'PrivateMessage2'.
  Invalid assignment of type PrivateMessage1 tot type PrivateMessage2. Check if predicates are correct


==== tests/cases/compiler/assignmentCompatPredicates5inheritance.ts (1 errors) ====
    
    interface PrivateMessage {
        text?: string;
        userid?: number;
        screenname?: string;
        smthg?: number;
    } constrains {
        present(text);
    or(and(present(userid), not(present(screenname))),
        and(not(present(userid)), present(screenname)));
    not(present(smthg));
    }
    interface PrivateMessage1 {
        text?: string;
        userid?: number;
        screenname?: string;
    } constrains {
        present(text);
    present(screenname);
    present(userid);
    }
    
    interface PrivateMessage2 extends PrivateMessage{
        // inherit properties
    } constrains {
        present(userid);
    }
    
    let pm1: PrivateMessage1 = {text: "Hi!", screenname: "Alice", userid: 42};
    let pm2: PrivateMessage2 = pm1;
        ~~~
!!! error TS2322: Type 'PrivateMessage1' is not assignable to type 'PrivateMessage2'.
!!! error TS2322:   Invalid assignment of type PrivateMessage1 tot type PrivateMessage2. Check if predicates are correct
    let pm3: PrivateMessage = pm2;